--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -76,7 +76,6 @@
 {#        </div>#}
 {#    </li>#}
 {#</ul>#}
-
 <script id="profile-card-template" type="text/x-template">
     <ul class="dropdown-menu arrow_box profile-card">
         <li>
@@ -130,4 +129,6 @@
         </li>
     </ul>
 </script>
+
+<script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/profile-link-cmp.js"></script>
 
