--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -132,3 +132,7 @@
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/profile-link-cmp.js"></script>
 
+<script id="profile-link-template" type="text/x-template">
+    <a v-on:click="onClick" data-toggle="dropdown" href="#">${user.best_name}</a>
+</script>
+
