--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -90,8 +90,12 @@
 {#                        {% include "includes/profile-card.html" %}#}
 {#                    </td>#}
                     <td>
-                        <template v-for="owner in owners" >
-                            <profile-link :user="owner" v-bind:key="owner.id" v-on:load-card="onLoadCard($event)"></profile-link>
+                        <template v-for="owner in owners">
+                            <profile-link
+                                :user="owner"
+                                v-bind:key="owner.id"
+                                v-on:load-card="onLoadCard($event)">
+                            </profile-link>
                         </template>
 
                         <profile-card :user="userCardSelected"></profile-card>
