--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -89,7 +89,7 @@
 {#                        {% endfor %}#}
 {#                        {% include "includes/profile-card.html" %}#}
 {#                    </td>#}
-                    <td>
+                    <td class="owners-wrapper">
                         <template v-for="owner in owners">
                             <profile-link
                                 :user="owner"
