Add logic for card position

--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -1,5 +1,6 @@
 <script id="profile-card-template" type="text/x-template">
-    <ul class="dropdown-menu arrow_box profile-card">
+    <ul class="dropdown-menu arrow_box profile-card"
+        :style="{top: position.top + 'px', left: position.left + 'px'}">
         <li>
             <div class="flex">
                 <div>
@@ -86,6 +87,6 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/profile-link-cmp.js"></script>
 
 <script id="profile-link-template" type="text/x-template">
-    <a v-on:click="$emit('load-card', user)" data-toggle="dropdown" href="#">${user.best_name}</a>
+    <a v-on:click="$emit('load-card', {user: user, event: $event})" data-toggle="dropdown" href="#">${user.best_name}</a>
 </script>
 
