--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -98,7 +98,9 @@
                             </profile-link>
                         </template>
 
-                        <profile-card :user="userCardSelected"></profile-card>
+                        <profile-card :user="userCardSelected"
+                                      :position="cardPosition">
+                        </profile-card>
                     </td>
                 </tr>
                 <tr>
