--- a/theme/templates/resource-landing-page/quota.html
+++ b/theme/templates/resource-landing-page/quota.html
@@ -5,12 +5,11 @@
     </div>
     <div class="panel-body">
         <span>The quota holder of this resource is: </span>
-        <span><a :href="'/user/' + quotaHolder.id">${quotaHolder.best_name}</a></span>
-        {# TODO: create a reusable component for this template #}
-{#        <span>#}
-{#            {% include "includes/profile-link.html" with user=quota_holder %}#}
-{#            {% include "includes/profile-card.html" %}#}
-{#        </span>#}
+        <span>
+{#            <a :href="'/user/' + quotaHolder.id">${quotaHolder.best_name}</a>#}
+            <profile-link v-on:load-card="onLoadQuotaHolderCard($event)" :user="quotaHolder"></profile-link>
+            <profile-card :user="quotaHolder" :position="cardPosition"></profile-card>
+        </span>
 
         <button v-show="!hasOnlyOneOwner"
                 id="btn-change-quota-holder" type="button" class="btn btn-default btn-xs"
