Get more profile data when adding access Cleanup endpoints of unused data

--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -87,5 +87,6 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/profile-link-cmp.js"></script>
 
 <script id="profile-link-template" type="text/x-template">
-    <a v-on:click="$emit('load-card', {user: user, event: $event})" data-toggle="dropdown" style="cursor: pointer;">${user.best_name}</a>
+    <a v-on:click="$emit('load-card', {user: user, event: $event})"
+       data-toggle="dropdown" style="cursor: pointer;">${user.best_name}</a>
 </script>
