--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -71,7 +71,7 @@
                                     data-value="users">Users</button>
                             <button type="button"
                                     :class="{btn: true, 'btn-primary': !isInviteUsers, 'btn-default': isInviteUsers}"
-                                    @click="isInviteUsers = false"
+                                    @click="isInviteUsers = false; if (selectedAccess === 'owner') {selectedAccess = 'view'}"
                                     data-value="groups">Groups</button>
                         </div>
 
