--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -655,7 +655,7 @@
                                             <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
                                             <small class="uploading-message">
                                                 <strong>Uploading files to:</strong>&nbsp;
-                                                <span id="root-path">contents</span><span id="upload-folder-path"></span>
+                                                <span id="root-path">contents</span>
                                                 <strong>&nbsp;&nbsp;Progress:&nbsp;</strong>
                                                 <span id="upload-progress"></span>
                                             </small>
