--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1775,6 +1775,10 @@ body > .main-container {
 	max-width: 100%;
 }
 
+#btn-select-irods-file.disabled {
+	pointer-events: none;
+}
+
 div#sharing-status .col-sm-12{
 	margin-bottom: 20px;
 }
