--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -12,9 +12,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="collaborate-nav">
-                        <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
+                        <a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
                         <a href="{% url "my_groups" %}" class="collaborate-nav-item active">My Groups</a>
-                        <a href="{% url "community" %}" class="collaborate-nav-item">Community</a>
                     </div>
                 </div>
             </div>
