--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -16,7 +16,7 @@
             <br/>  <br>
             <br>
 
-            <a href="{% url 'communities' %}"><img src="{{ STATIC_URL }}/img/communities.jpg">COMMUNITIES</a><br/>
+            <a href="{% url 'communities' %}"><img src="{{ STATIC_URL }}/img/communities/communities.jpg">COMMUNITIES</a><br/>
             A Community is a collection of Groups that have something in common like being members of a large research network. Communities are designed around public data sharing and open access.<br><br>
         </div>
     </div>
